<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <group android:checkableBehavior="single" >
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_eye"
                android:title="@string/recognize_objects"/>
            <item
                android:id="@+id/nav_model_overview"
                android:icon="@drawable/ic_model_overview"
                android:title="@string/model_overview" />
            <item
                android:id="@+id/nav_object_overview"
                android:icon="@drawable/ic_library"
                android:title="@string/object_overview" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_gear_wheel"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
        </group>
    </item>
</menu>
