<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/help_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/usage"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textAlignment="center"
        android:text="@string/help_text_add_info"
        android:layout_marginTop="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/help_dialog_title"
        android:layout_marginBottom="64dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_backward_button"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/help_dialog_text"
        app:layout_constraintTop_toTopOf="@id/help_dialog_text"
        app:layout_constraintBottom_toBottomOf="@id/help_dialog_text"
        android:src="@drawable/ic_arrow_backward"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/back" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_forward_button"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/help_dialog_text"
        app:layout_constraintTop_toTopOf="@id/help_dialog_text"
        app:layout_constraintBottom_toBottomOf="@id/help_dialog_text"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_arrow_forward"
        android:contentDescription="@string/forward" />

    <TextView
        android:id="@+id/help_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_text_dialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_dialog_text"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/help_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progress="1"
        android:max="4"
        app:layout_constraintTop_toBottomOf="@id/help_progress_text"/>

    <CheckBox
        android:id="@+id/help_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_show_again"
        app:layout_constraintTop_toBottomOf="@id/help_progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/help_training_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_start_training"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_checkbox"/>


</androidx.constraintlayout.widget.ConstraintLayout>