<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/reset_app_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings_reset_application"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/reset_app_dialog_sum1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_app_dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reset_are_you_sure"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/reset_app_dialog_sum2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_app_dialog_sum1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reset_not_recoverable"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/red"
        android:maxLines="2"/>
    <Button
        android:id="@+id/reset_app_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/dialog_delete"
        android:backgroundTint="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/reset_app_dialog_sum2" />

    <Button
        android:id="@+id/reset_app_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_cancel"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/reset_app_dialog_sum2"/>

</androidx.constraintlayout.widget.ConstraintLayout>